# quicksort

./: CMakeLists.txt  README.md  cilktime.h  measure.sh  qsort.cpp  qsort.kdev4
.kdev4/: qsort.kdev4
